# agent-loop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  install.sh
.claude/skills/pragmatic-rust/: SKILL.md
apps/dashboard/: package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
apps/dashboard/playwright-report/: index.html
apps/dashboard/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/dashboard/src/components/: commit-list.tsx  daemon-status-banner.tsx  diff-viewer.tsx  file-list.tsx  lifecycle-checklist.tsx  log-viewer.tsx  review-actions.tsx  run-card.tsx  run-detail.tsx  run-list.tsx  step-timeline.tsx  workspace-switcher.tsx
apps/dashboard/src/hooks/: use-daemon-health.ts  use-keyboard-navigation.ts  use-run-diff.ts  use-run-events.ts  use-run-output.ts  use-run.ts  use-runs.ts  use-steps.ts
apps/dashboard/src/lib/: api.ts  sse.ts  types.ts
apps/dashboard/src/mocks/: fixtures.ts  handlers.ts
apps/dashboard/src/routes/: __root.tsx  index.tsx
apps/dashboard/src/routes/runs/: $runId.review.tsx  $runId.tsx
apps/dashboard/tests/: api.test.ts  setup.ts  smoke.test.ts
crates/loop-core/: Cargo.toml
crates/loop-core/src/: artifacts.rs  completion.rs  config.rs  events.rs  lib.rs  plan.rs  prompt.rs  report.rs  skills.rs  types.rs
crates/loopctl/: Cargo.toml
crates/loopctl/src/: client.rs  main.rs  render.rs
crates/loopd/: Cargo.toml
crates/loopd/src/: git.rs  lib.rs  main.rs  naming.rs  postmortem.rs  runner.rs  scheduler.rs  server.rs  storage.rs  verifier.rs  watchdog.rs  worktree.rs  worktree_worktrunk.rs
crates/loopd/src/handlers/: mod.rs  review.rs
crates/loopd/src/skills/: catalog.rs  match.rs  metrics.rs  mod.rs  render.rs  sync.rs
crates/loopd/tests/: server_integration.rs
dev/: reinstall
lib/: agent-loop-ui.sh
migrations/: 0001_init.sql  0002_add_worktree_provider.sql  0003_add_worktree_cleanup_state.sql  0004_add_review_fields.sql
scripts/: test-stream-json.sh
specs/: LEARNINGS.md  README.md  consecutive-failure-detection.md  daemon-review-api.md  dashboard.md  distributed-scheduling.md  open-skills-orchestration.md  orchestrator-daemon-extended.md  orchestrator-daemon.md  postmortem-analysis.md  worktrunk-integration.md
specs/planning/: SPEC_AUTHORING.md  consecutive-failure-detection-plan.md  daemon-review-api-plan.md  dashboard-plan.md  distributed-scheduling-plan.md  open-skills-orchestration-plan.md  orchestrator-daemon-extended-plan.md  orchestrator-daemon-plan.md  postmortem-analysis-plan.md  worktrunk-integration-plan.md
