[package]
name = "loopctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
loop-core = { path = "../loop-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2"
futures = "0.3"
mimalloc = { workspace = true }
