[package]
name = "loopd"
version.workspace = true
edition = "2021"
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "loopd"
path = "src/main.rs"

[dependencies]
loop-core = { path = "../loop-core" }
tokio = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
dirs = "5"
axum = { version = "0.8", features = ["default"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
