[package]
name = "loopd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "loopd"
path = "src/main.rs"

[dependencies]
loop-core = { path = "../loop-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
dirs = "5"
axum = { version = "0.8", features = ["default"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["trace"] }
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
